@@ -131,4 +131,12 @@ implements Writable, NodeRegistration {
     storageInfo.readFields(in);
     exportedKeys.readFields(in);
   }
+  @Override
+  public boolean equals(Object to) {
+    return super.equals(to);
+  }
+  @Override
+  public int hashCode() {
+    return super.hashCode();
+  }
 }
